--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
 
         <activity
@@ -32,6 +33,14 @@
                 android:name=".activities.info.ArtistActivity"
                 android:label="@string/title_activity_artist"
                 android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+
+        <activity
+                android:name=".activities.info.TempConcertActivity"
+                android:label="@string/title_activity_artist"
+                android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
     </application>
 
