--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Dec 23 12:24:15 KST 2018
-sdk.dir=/Users/chloechoi/Library/Android/sdk
+sdk.dir=C\:\\Users\\gds04\\AppData\\Local\\Android\\Sdk
